5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1573_1559.log
== TEST (2019-03-12 12:30:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print .upper(frase.???)
-- ERROR:
File "XXXX", line 2
    print .upper(frase.???)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:30:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print .upper(frase.???)
-- EXECUTION TIME:
0.13169
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print .upper(frase.???)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:15) 
-- CODE:
frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:31:16) 
-- CODE:
frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- EXECUTION TIME:
0.126601
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:17) 
-- CODE:
frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = .upper("Ada Lovelace foi a primeira programadora da historia.")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:28) 
-- CODE:
frase = print.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:31:29) 
-- CODE:
frase = print.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- EXECUTION TIME:
0.215953
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:31) 
-- CODE:
frase = print.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:33) 
-- CODE:
frase = print.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:31:33) 
-- CODE:
frase = print.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.")
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:33:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- EXECUTION TIME:
0.187829
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.")
                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.")
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.")
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.")
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:34:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase) 
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:34:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase) 
-- EXECUTION TIME:
0.129501
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
